--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,8 @@ li {
   margin: 20px; /* Margin around the container for separation */
   border-radius: 10px; /* Optional: rounded corners for a softer look */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: subtle shadow for depth */
+  justify-content: center;
+  align-items: center;
 }
 
 .important-button {
@@ -157,7 +159,9 @@ input[type="button"] {
 
 .logo-container {
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: center;
+  align-items: center;
   padding: 10px;
 }
 
